--- a/index.html
+++ b/index.html
@@ -27,43 +27,42 @@
     </header>
 
     <main>
-      <div>
-        <!--Герой-->
-        <section>
-          <h1>
-            Эффективные решения <br />
-            для вашего бизнеса
-          </h1>
-          <button>Заказать услугу</button>
-        </section>
-      </div>
+      <!--Герой-->
+      <section>
+        <h1>
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <button>Заказать услугу</button>
+      </section>
 
       <!--Особенности-->
       <section>
+        <h2>Особенности</h2>
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -94,22 +93,22 @@
         <ul>
           <li>
             <img src="./images/img.jpg" alt="Игорь Демьяненко" width="270" />
-            <p>Игорь Демьяненко</p>
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" alt="Ольга Репина" width="270" />
-            <p>Ольга Репина</p>
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="Николай Тарасов" width="270" />
-            <p>Николай Тарасов</p>
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img4.jpg" alt="Михаил Ермаков" width="270" />
-            <p>Михаил Ермаков</p>
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
